multi-select changed to listbox

--- a/BugSmear/Views/Projects/Details.cshtml
+++ b/BugSmear/Views/Projects/Details.cshtml
@@ -22,8 +22,9 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    <a href="/ProjectUsers/AssignUsers/@Model.Id">Assign Users</a> |
-    <a href="/ProjectUsers/RemoveUsers/@Model.Id">Remove Users</a> |
+    @*<a href="/ProjectUsers/AssignUsers/@Model.Id">Assign Users</a> |*@
+    @*<a href="/ProjectUsers/RemoveUsers/@Model.Id">Remove Users</a> |*@
+    <a href="/ProjectUsers/AssignRemoveUsers/@Model.Id">AssignRemove Users</a> |
     @Html.ActionLink("Back to List", "Index")
 </p>
 <h4>Users assigned to this Project </h4>
