--- a/BugSmear/Views/Projects/Edit.cshtml
+++ b/BugSmear/Views/Projects/Edit.cshtml
@@ -33,8 +33,7 @@
 <!---------------------------------------------------------------------------->
 
 
-        <a href="/ProjectUsers/AssignUsers/@Model.Id">Assign Users</a> |
-        <a href="/ProjectUsers/RemoveUsers/@Model.Id">Remove Users</a> 
+        <a href="/ProjectUsers/AssignRemoveUsers/@Model.Id">Assign/Remove Users</a>
     
 
 
